@@ -1,5 +1,12 @@
 2011-03-13  Ivan Maidanski  <ivmai@mail.ru>
 
+	* extra/msvc_dbg.c: Test _MSC_VER macro; include "gc.h" (for
+	GC_word); reformat the code; expand all tabs to spaces.
+	* extra/msvc_dbg.c (ULONG_PTR): Replace with GC_ULONG_PTR; define
+	as word.
+
+2011-03-13  Ivan Maidanski  <ivmai@mail.ru>
+
 	* dbg_mlc.c (GC_get_back_ptr_info, GC_print_obj,
 	GC_print_smashed_obj, GC_debug_free_inner): Add a code for a
 	LINT-like tool to instruct it that the function is invoked only
